--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "api": "nodemon --watch server server/server.ts",
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
+    "build-server": "tsc -p tsconfig.server.json",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,18 +21,24 @@
   "homepage": "https://github.com/Coderah/cogni-blocks#readme",
   "description": "",
   "dependencies": {
+    "@google/genai": "^0.8.0",
     "@tailwindcss/vite": "^4.0.17",
+    "@types/express": "^5.0.1",
     "@types/lodash": "^4.17.16",
+    "@types/ws": "^8.18.1",
     "@vitejs/plugin-vue": "^5.2.2",
     "@vue/tsconfig": "^0.7.0",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lodash": "^4.17.21",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.17",
     "typescript": "~5.7.2",
     "uuid": "^11.1.0",
     "vite": "^6.2.2",
     "vue-router": "^4.5.0",
-    "vue-tsc": "^2.2.8"
-  },
-  "devDependencies": {
+    "vue-tsc": "^2.2.8",
+    "ws": "^8.18.1"
   }
 }
