--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
     "build-server": "tsc -p tsconfig.server.json",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "postinstall": "deepkit-type-install"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,8 @@
   "homepage": "https://github.com/Coderah/cogni-blocks#readme",
   "description": "",
   "dependencies": {
+    "@deepkit/type": "^1.0.5",
+    "@deepkit/vite": "^1.0.5",
     "@google/genai": "^0.8.0",
     "@tailwindcss/vite": "^4.0.17",
     "@types/express": "^5.0.1",
@@ -34,11 +36,15 @@
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.0.17",
-    "typescript": "~5.7.2",
+    "typescript": "^5.8.3",
+    "unplugin-vue-components": "^28.4.1",
     "uuid": "^11.1.0",
     "vite": "^6.2.2",
     "vue-router": "^4.5.0",
     "vue-tsc": "^2.2.8",
     "ws": "^8.18.1"
+  },
+  "devDependencies": {
+    "@deepkit/type-compiler": "^1.0.5"
   }
 }
