--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -3,6 +3,7 @@
     "compilerOptions": {
         "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.app.tsbuildinfo",
 
+        "verbatimModuleSyntax": false,
         /* Linting */
         "strict": true,
         "noUnusedLocals": true,
@@ -10,9 +11,6 @@
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true
     },
-    "include": [
-        "src/**/*.ts",
-        "src/**/*.tsx",
-        "src/**/*.vue"
-    ]
+    "reflection": true,
+    "include": ["src/**/*.ts", "src/**/*.tsx", "src/**/*.vue"]
 }
