--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,5 +6,6 @@
     "references": [
         { "path": "./tsconfig.app.json" },
         { "path": "./tsconfig.node.json" }
-    ]
+    ],
+    "reflection": true
 }
