--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -21,5 +21,6 @@
         "noFallthroughCasesInSwitch": true,
         "noUncheckedSideEffectImports": true
     },
-    "include": ["vite.config.mts"]
+    "reflection": true,
+    "include": ["vite.config.ts"]
 }
