--- a/tsconfig.server.json
+++ b/tsconfig.server.json
@@ -11,6 +11,7 @@
         "moduleResolution": "node",
         "sourceMap": true
     },
+    "reflection": true,
     "include": ["server/**/*.ts"],
     "exclude": ["node_modules"]
 }
