--- a/package.json
+++ b/package.json
@@ -45,6 +45,9 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@deepkit/type-compiler": "^1.0.5"
+    "@deepkit/type-compiler": "^1.0.5",
+    "cli-progress": "^3.12.0",
+    "file-regex": "^3.1.0",
+    "yaml": "^2.7.1"
   }
 }
